Index in tables added

--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/ExperimentalTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/ExperimentalTable.fxml
@@ -11,6 +11,12 @@
          VBox.vgrow="ALWAYS">
     <TableView fx:id="experimentalTable" maxWidth="Infinity" minWidth="120" maxHeight="Infinity" VBox.vgrow="ALWAYS">
         <columns>
+            <TableColumn maxWidth="25" prefWidth="25" sortable="false" text="N" styleClass="centered-column"
+                         resizable="false">
+                <cellValueFactory>
+                    <PropertyValueFactory property="index"/>
+                </cellValueFactory>
+            </TableColumn>
             <TableColumn fx:id="AB_2Col" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                          text="%experimentalAB_2" sortable="false">
                 <cellValueFactory>
