--- a/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/usercontrols/vestables/ModelTable.fxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
          alignment="CENTER"
@@ -12,6 +11,12 @@
          VBox.vgrow="ALWAYS">
     <TableView fx:id="modelTable" maxWidth="Infinity" minWidth="60" maxHeight="Infinity" VBox.vgrow="ALWAYS">
         <columns>
+            <TableColumn maxWidth="25" prefWidth="25" sortable="false" text="N" styleClass="centered-column"
+                         resizable="false">
+                <cellValueFactory>
+                    <PropertyValueFactory property="index"/>
+                </cellValueFactory>
+            </TableColumn>
             <TableColumn fx:id="powerCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                          text="%modelPower" sortable="false">
                 <cellValueFactory>
