--- a/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-<fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx"
-         xmlns:fx="http://javafx.com/fxml"
-         prefHeight="400.0" prefWidth="600.0"
-         stylesheets="@../../common.css, @NoFileScreen.css" style="-fx-background-color: white">
+<VBox fx:id="root" xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      prefHeight="400.0" prefWidth="600.0"
+      stylesheets="@../common.css, @NoFileScreen.css" style="-fx-background-color: white"
+      fx:controller="ru.nucodelabs.gem.view.main.NoFileScreenController">
 
     <HBox maxWidth="Infinity" maxHeight="Infinity" VBox.vgrow="ALWAYS" alignment="CENTER">
         <VBox alignment="CENTER" maxWidth="Infinity" maxHeight="Infinity">
@@ -22,11 +23,11 @@
             <HBox fx:id="textContainer">
                 <Text text="%noFileText"/>
             </HBox>
-            <Button fx:id="openSectionButton" text="%openSection" defaultButton="true"/>
+            <Button fx:id="openSectionButton" text="%openSection" defaultButton="true" onAction="#openSection"/>
             <HBox maxHeight="10" prefHeight="10"/>
-            <Button fx:id="openEXPButton" text="%openEXPFile"/>
+            <Button fx:id="openEXPButton" text="%openEXPFile" onAction="#importEXP"/>
         </VBox>
     </HBox>
 
 
-</fx:root>
+</VBox>
