--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -5,9 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
-<?import ru.nucodelabs.gem.view.usercontrols.misfitstacks.MisfitStacks?>
 <?import ru.nucodelabs.gem.view.usercontrols.placeholder.Placeholder?>
-<?import ru.nucodelabs.gem.view.usercontrols.vescurves.VESCurves?>
 <?import ru.nucodelabs.gem.view.usercontrols.vestables.ExperimentalTable?>
 <?import ru.nucodelabs.gem.view.usercontrols.vestables.ModelTable?>
 <Stage xmlns="http://javafx.com/javafx"
@@ -93,16 +91,8 @@
 
                                 <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity"
                                            VBox.vgrow="ALWAYS">
-                                    <MisfitStacks
-                                            lowerBoundX="${vesCurves.lowerBoundX}"
-                                            data="${controller.misfitStacksData}"/>
-                                    <VESCurves fx:id="vesCurves"
-                                               lowerBoundX="${controller.vesCurvesXLowerBound}"
-                                               upperBoundX="${controller.vesCurvesXUpperBound}"
-                                               lowerBoundY="${controller.vesCurvesYLowerBound}"
-                                               upperBoundY="${controller.vesCurvesYUpperBound}"
-                                               legendVisible="${menuViewVESCurvesLegend.selected}"
-                                               data="${controller.vesCurvesData}"/>
+                                    <fx:include fx:id="misfitStacks" source="../charts/MisfitStacks.fxml"/>
+                                    <fx:include fx:id="vesCurves" source="../charts/VESCurves.fxml"/>
                                 </SplitPane>
                                 <TabPane VBox.vgrow="ALWAYS">
                                     <Tab text="%experimentalTable" closable="false">
