--- a/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/NoFileScreen.fxml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
 <VBox fx:id="root" xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       prefHeight="400.0" prefWidth="600.0"
@@ -21,11 +19,11 @@
             <Label VBox.vgrow="ALWAYS"
                    style="-fx-font-weight: bold; -fx-font-size: 22pt;" text="%noFileTitle"/>
             <HBox fx:id="textContainer">
-                <Text text="%noFileText"/>
+                <Label text="%noFileText"/>
             </HBox>
-            <Button fx:id="openSectionButton" text="%openSection" defaultButton="true" onAction="#openSection"/>
+            <Button text="%openSection" defaultButton="true" onAction="#openSection"/>
             <HBox maxHeight="10" prefHeight="10"/>
-            <Button fx:id="openEXPButton" text="%openEXPFile" onAction="#importEXP"/>
+            <Button text="%openEXPFile" onAction="#importEXP"/>
         </VBox>
     </HBox>
 
