--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -52,58 +52,63 @@
                     </Menu>
                 </MenuBar>
                 <StackPane>
-
-                    <SplitPane orientation="VERTICAL">
+                    <VBox>
+                        <fx:include fx:id="picketsBar" source="PicketsBar.fxml"/>
                         <SplitPane orientation="VERTICAL">
-                            <Placeholder text="%pseudoSection"/>
-                            <Placeholder text="%geoSection"/>
-                        </SplitPane>
-
-                        <VBox maxWidth="Infinity"
-                              maxHeight="Infinity"
-                              VBox.vgrow="ALWAYS">
-
-                            <HBox alignment="CENTER_LEFT" maxWidth="Infinity" style="-fx-background-color: WhiteSmoke">
-                                <HBox style="-fx-padding: 5">
-                                    <Button style="-fx-pref-width: 35" text="%left" onAction="#switchToPrevPicket"/>
-                                </HBox>
-                                <HBox style="-fx-padding: 5">
-                                    <Button style="-fx-pref-width: 35" text="%right" onAction="#switchToNextPicket"/>
-                                </HBox>
-                                <Label style="-fx-padding: 5; -fx-text-fill: Gray" text="${controller.vesNumber}"/>
-                                <Label style="-fx-padding: 5" text="${controller.vesTitle}"/>
-                                <HBox HBox.hgrow="ALWAYS"/>
-                                <HBox style="-fx-padding: 5">
-                                    <Button text="%inverse"/>
-                                </HBox>
-                                <HBox style="-fx-padding: 5">
-                                    <Button text="Button 2"/>
-                                </HBox>
-                                <HBox style="-fx-padding: 5">
-                                    <Button text="Button 3"/>
-                                </HBox>
-
-                            </HBox>
-                            <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity"
-                                       VBox.vgrow="ALWAYS">
-
-                                <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity"
-                                           VBox.vgrow="ALWAYS">
-                                    <fx:include fx:id="misfitStacks" source="../charts/MisfitStacks.fxml"/>
-                                    <fx:include fx:id="vesCurves" source="../charts/VESCurves.fxml"/>
-                                </SplitPane>
-                                <TabPane VBox.vgrow="ALWAYS">
-                                    <Tab text="%experimentalTable" closable="false">
-                                        <fx:include fx:id="experimentalTable"
-                                                    source="../tables/ExperimentalTable.fxml"/>
-                                    </Tab>
-                                    <Tab text="%modelTable" closable="false">
-                                        <fx:include fx:id="modelTable" source="../tables/ModelTable.fxml"/>
-                                    </Tab>
-                                </TabPane>
+                            <SplitPane orientation="VERTICAL">
+                                <Placeholder text="%pseudoSection"/>
+                                <Placeholder text="%geoSection"/>
                             </SplitPane>
-                        </VBox>
-                    </SplitPane>
+
+                            <VBox maxWidth="Infinity"
+                                  maxHeight="Infinity"
+                                  VBox.vgrow="ALWAYS">
+
+                                <HBox alignment="CENTER_LEFT" maxWidth="Infinity"
+                                      style="-fx-background-color: WhiteSmoke">
+                                    <HBox style="-fx-padding: 5">
+                                        <Button style="-fx-pref-width: 35" text="%left" onAction="#switchToPrevPicket"/>
+                                    </HBox>
+                                    <HBox style="-fx-padding: 5">
+                                        <Button style="-fx-pref-width: 35" text="%right"
+                                                onAction="#switchToNextPicket"/>
+                                    </HBox>
+                                    <Label style="-fx-padding: 5; -fx-text-fill: Gray" text="${controller.vesNumber}"/>
+                                    <Label style="-fx-padding: 5" text="${controller.vesTitle}"/>
+                                    <HBox HBox.hgrow="ALWAYS"/>
+                                    <HBox style="-fx-padding: 5">
+                                        <Button text="%inverse"/>
+                                    </HBox>
+                                    <HBox style="-fx-padding: 5">
+                                        <Button text="Button 2"/>
+                                    </HBox>
+                                    <HBox style="-fx-padding: 5">
+                                        <Button text="Button 3"/>
+                                    </HBox>
+
+                                </HBox>
+                                <SplitPane dividerPositions="0.7" maxHeight="Infinity" maxWidth="Infinity"
+                                           VBox.vgrow="ALWAYS">
+
+                                    <SplitPane orientation="VERTICAL" dividerPositions="0.3" maxHeight="Infinity"
+                                               VBox.vgrow="ALWAYS">
+                                        <fx:include fx:id="misfitStacks" source="../charts/MisfitStacks.fxml"/>
+                                        <fx:include fx:id="vesCurves" source="../charts/VESCurves.fxml"/>
+                                    </SplitPane>
+                                    <TabPane VBox.vgrow="ALWAYS">
+                                        <Tab text="%experimentalTable" closable="false">
+                                            <fx:include fx:id="experimentalTable"
+                                                        source="../tables/ExperimentalTable.fxml"/>
+                                        </Tab>
+                                        <Tab text="%modelTable" closable="false">
+                                            <fx:include fx:id="modelTable" source="../tables/ModelTable.fxml"/>
+                                        </Tab>
+                                    </TabPane>
+                                </SplitPane>
+                            </VBox>
+                        </SplitPane>
+                    </VBox>
+
                     <fx:include fx:id="noFileScreen" source="NoFileScreen.fxml"/>
                 </StackPane>
             </VBox>
