--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -10,13 +10,13 @@
       stylesheets="@../common.css"
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.tables.ModelTableController">
-    <TableView fx:id="table" maxWidth="Infinity" minWidth="60" maxHeight="Infinity" VBox.vgrow="ALWAYS">
+    <TableView fx:id="table" maxWidth="Infinity" minWidth="60" maxHeight="Infinity" VBox.vgrow="ALWAYS" editable="true">
         <placeholder>
             <Button text="%newModel"/>
         </placeholder>
         <columns>
             <TableColumn maxWidth="25" prefWidth="25" sortable="false" text="N" styleClass="centered-column"
-                         resizable="false">
+                         resizable="false" editable="false">
                 <cellValueFactory>
                     <PropertyValueFactory property="index"/>
                 </cellValueFactory>
@@ -33,7 +33,7 @@
                     <PropertyValueFactory property="resistance"/>
                 </cellValueFactory>
             </TableColumn>
-            <TableColumn fx:id="polarization" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
+            <TableColumn fx:id="polarizationCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                          text="%modelPolarization" sortable="false">
                 <cellValueFactory>
                     <PropertyValueFactory property="polarization"/>
