--- a/src/main/resources/ru/nucodelabs/gem/view/common.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/common.css
@@ -165,3 +165,15 @@
 .centered-column {
     -fx-alignment: center;
 }
+
+.text-field {
+    -fx-background-color: WhiteSmoke;
+}
+
+.text-field:focused {
+    -fx-background-color: LightGray;
+}
+
+.wrong-input {
+    -fx-background-color: LightPink;
+}
