--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -10,12 +10,16 @@
       stylesheets="@../common.css"
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.tables.ModelTableController">
+    <HBox alignment="CENTER_LEFT" maxWidth="Infinity" style="-fx-padding: 5" HBox.hgrow="ALWAYS">
+        <Button fx:id="delete" text="Удалить выбранное" onAction="#deleteSelected"/>
+    </HBox>
     <TableView editable="true" fx:id="table" maxWidth="Infinity" minWidth="60" maxHeight="Infinity" VBox.vgrow="ALWAYS">
         <placeholder>
             <Button text="%newModel"/>
         </placeholder>
         <columns>
-            <TableColumn maxWidth="25" prefWidth="25" sortable="false" text="N" styleClass="centered-column"
+            <TableColumn fx:id="indexCol" maxWidth="25" prefWidth="25" sortable="false" text="N"
+                         styleClass="centered-column"
                          resizable="false" editable="false">
                 <cellValueFactory>
                     <PropertyValueFactory property="index"/>
@@ -42,6 +46,10 @@
         </columns>
     </TableView>
     <HBox>
+        <VBox style="-fx-padding: 5">
+            <TextField fx:id="indexTextField" promptText="N"
+                       prefWidth="45" minWidth="45"/>
+        </VBox>
         <VBox style="-fx-padding: 5">
             <TextField fx:id="powerTextField" promptText="%modelPower"
                        prefWidth="${powerCol.width}"/>
