График видит данные и скейлится от них, но че-то не отображается. Возможно, с цветами надо поиграться.

--- a/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/cross_section/CrossSection.fxml
@@ -24,7 +24,7 @@
             </xAxis>
             <yAxis>
                 <NumberAxis fx:id="sectionStackedBarChartYAxis" forceZeroInRange="false"
-                            label="%geoSectionY" side="LEFT" tickUnit="10.0" autoRanging="false" upperBound="400">
+                            label="%geoSectionY" side="LEFT" tickUnit="10.0" upperBound="400">
                 </NumberAxis>
             </yAxis>
         </StackedBarChart>
