--- a/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
@@ -15,6 +15,8 @@
       fx:controller="ru.nucodelabs.gem.view.charts.MisfitStacksController">
     <HBox maxWidth="Infinity">
         <Label styleClass="uclabel" text="%misfit" VBox.vgrow="NEVER"/>
+        <HBox HBox.hgrow="ALWAYS"/>
+        <Label fx:id="text" styleClass="uclabel" text="-" VBox.vgrow="NEVER"/>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" title="\%"
                titleSide="LEFT" minHeight="0" minWidth="0" animated="false">
