--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -24,7 +24,8 @@
                     <Menu text="%file">
                         <MenuItem text="%newWindow" onAction="#newWindow"/>
                         <Menu text="%open">
-                            <MenuItem text="%section" fx:id="menuFileOpenSection" onAction="#openSection"/>
+                            <MenuItem text="%section" fx:id="menuFileOpenSection" onAction="#openSection"
+                                      accelerator="Shortcut+O"/>
                         </Menu>
                         <Menu text="%import">
                             <Menu text="%picket">
@@ -34,7 +35,8 @@
                             </Menu>
                         </Menu>
                         <Menu text="%save">
-                            <MenuItem text="%section" onAction="#saveSection" disable="${controller.noFileOpened}"/>
+                            <MenuItem text="%section" onAction="#saveSection" disable="${controller.noFileOpened}"
+                                      accelerator="Shortcut+S"/>
                         </Menu>
                         <Menu text="%export">
                             <MenuItem text="%picket" onAction="#exportJsonPicket"/>
@@ -42,7 +44,8 @@
                         <MenuItem text="%close" onAction="#closeFile"/>
                     </Menu>
                     <Menu text="%edit">
-                        <MenuItem text="Delete"/>
+                        <MenuItem text="Undo" onAction="#undo" accelerator="Shortcut+Z"/>
+                        <MenuItem text="Redo" onAction="#redo" accelerator="Shift+Shortcut+Z"/>
                     </Menu>
                     <Menu fx:id="menuView" text="%view">
                         <Menu text="%legend">
