--- a/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/main/MainSplitLayoutView.fxml
@@ -44,8 +44,8 @@
                         <MenuItem text="%close" onAction="#closeFile"/>
                     </Menu>
                     <Menu text="%edit">
-                        <MenuItem text="Undo" onAction="#undo" accelerator="Shortcut+Z"/>
-                        <MenuItem text="Redo" onAction="#redo" accelerator="Shift+Shortcut+Z"/>
+                        <MenuItem text="%undo" onAction="#undo" accelerator="Shortcut+Z"/>
+                        <MenuItem text="%redo" onAction="#redo" accelerator="Shift+Shortcut+Z"/>
                     </Menu>
                     <Menu fx:id="menuView" text="%view">
                         <Menu text="%legend">
